# Scientific-computing-C-

CUDA/: Helmholtz.cpp  a.out  compile.sh  gnuplot.h  main.cpp  mpidemo.cpp  out.txt  p.out  parallel_jacobi.cpp  plot.gp  saxpy.cpp  uend.txt  uf.txt
assign0/backup/: CMakeLists.txt
assign0/src/: CMakeCache.txt  HelloWorld.cpp  Makefile  cmake_install.cmake  helloWorld
assign1/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Problem1  Problem5  Q1-4.cpp  Q5-7  Q5-7.cpp  cmake_install.cmake
assign2/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Q1  Q1.cpp  Q2  Q2.cpp  cmake_install.cmake
assign3/src/Q1/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix2x2  Matrix2x2.cpp  Matrix2x2.hpp  cmake_install.cmake  main.cpp
assign3/src/Q2/: AbOde  AbstractOdeSolver.cpp  AbstractOdeSolver.hpp  CMakeCache.txt  CMakeLists.txt  ForwardEulerSolver.cpp  ForwardEulerSolver.hpp  Makefile  RungeKuttaSolver.cpp  RungeKuttaSolver.hpp  cmake_install.cmake  main.cpp
assign4/src/Q1/: CMakeCache.txt  CMakeLists.txt  Makefile  Strstreamfile  cmake_install.cmake  filename.txt  main.cpp  test.txt  ydeng1@ssh.ccv.brown.edu
assign4/src/Q2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pairs  pairs.hpp
assign5/back_up/: Matrix.hpp  bk2.hpp  bk3.hpp  main.cpp
assign5/src/Q1/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix  Matrix.hpp  bk.cpp  cmake_install.cmake  main.cpp
assign7/: VrmlApp.cpp  VrmlFunctions.cpp  VrmlFunctions.h  a.out  fourSphere.wrl
exercise/: CMakeCache.txt  CMakeLists.txt  Cylinder.cxx  Makefile  a.out  cmake_install.cmake  main.cpp  my.out
exercise/Cylinder.app/Contents/MacOS/: Cylinder
